test/should_not_compile/record5.sml
val { a, b } = { a = "A" };
